hphp/hack/test/typecheck/case_type/recursive/subtyping_mutual5c.php.exp
ERROR: File "subtyping_mutual5c.php", line 26, characters 12-13:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 9, characters 19-19:
  Expected `B`
  File "subtyping_mutual5c.php", line 4, characters 11-11:
  But got `nonnull` arising from an implicit `as ?nonnull` constraint on this type
ERROR: File "subtyping_mutual5c.php", line 26, characters 12-13:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 9, characters 19-19:
  Expected `B`
  File "subtyping_mutual5c.php", line 14, characters 3-3:
  But got `mixed`
  File "subtyping_mutual5c.php", line 4, characters 11-11:
    by the definition of `A` arising from an implicit `as ?nonnull` constraint on this type
ERROR: File "subtyping_mutual5c.php", line 27, characters 15-16:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 10, characters 22-27:
  Expected `vec<A>`
  File "subtyping_mutual5c.php", line 14, characters 3-3:
  But got `mixed`
  File "subtyping_mutual5c.php", line 4, characters 11-11:
    by the definition of `A` arising from an implicit `as ?nonnull` constraint on this type
ERROR: File "subtyping_mutual5c.php", line 28, characters 15-16:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 11, characters 22-27:
  Expected `vec<B>`
  File "subtyping_mutual5c.php", line 14, characters 3-3:
  But got `mixed`
  File "subtyping_mutual5c.php", line 4, characters 11-11:
    by the definition of `A` arising from an implicit `as ?nonnull` constraint on this type
ERROR: File "subtyping_mutual5c.php", line 33, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 11, characters 26-26:
  Expected `B`
  File "subtyping_mutual5c.php", line 4, characters 11-11:
  But got `nonnull` arising from an implicit `as ?nonnull` constraint on this type
ERROR: File "subtyping_mutual5c.php", line 33, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 11, characters 26-26:
  Expected `B`
  File "subtyping_mutual5c.php", line 6, characters 20-20:
  But got `mixed`
  File "subtyping_mutual5c.php", line 4, characters 11-11:
    by the definition of `A` arising from an implicit `as ?nonnull` constraint on this type
ERROR: File "subtyping_mutual5c.php", line 36, characters 12-13:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 9, characters 19-19:
  Expected `B`
  File "subtyping_mutual5c.php", line 16, characters 3-5:
  But got `int`
ERROR: File "subtyping_mutual5c.php", line 43, characters 5-7:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 11, characters 26-26:
  Expected `B`
  File "subtyping_mutual5c.php", line 18, characters 7-9:
  But got `int`
ERROR: File "subtyping_mutual5c.php", line 54, characters 5-7:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 8, characters 19-19:
  Expected `A`
  File "subtyping_mutual5c.php", line 23, characters 3-13:
  But got `vec<string>`
ERROR: File "subtyping_mutual5c.php", line 56, characters 12-14:
Invalid argument (Typing[4110])
  File "subtyping_mutual5c.php", line 9, characters 19-19:
  Expected `B`
  File "subtyping_mutual5c.php", line 23, characters 3-13:
  But got `vec<string>`
